force-app/main/default/objects/Account/fields/Contract_In_Place__c.field-meta.xml
<CustomField>
    <fullName>Contract_In_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract In Place?</label>
    <type>Checkbox</type>
</CustomField>