force-app/main/default/objects/Account/fields/Finance_Hold__c.field-meta.xml
<CustomField>
    <fullName>Finance_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Hold?</label>
    <type>Checkbox</type>
</CustomField>