force-app/main/default/objects/Account/fields/Number_of_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Closed_Won_Opportunities__c</fullName>
    <label>Number of Closed Won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>